@@ -5,6 +5,7 @@
 #include "Rendering/GL/myGL.h"
 #include "Platform/ConfigHandler.h"
 #include "DynWater.h"
+#include "RefractWater.h"
 #include "mmgr.h"
 
 CBaseWater* water=0;
@@ -23,9 +24,11 @@ CBaseWater::~CBaseWater(void)
 
 CBaseWater* CBaseWater::GetWater()
 {
-	if(GLEW_ARB_fragment_program && configHandler.GetInt("ReflectiveWater",1)==2 && ProgramStringIsNative(GL_FRAGMENT_PROGRAM_ARB,"waterDyn.fp") && GLEW_ARB_texture_float)
+	if(GLEW_ARB_fragment_program && configHandler.GetInt("ReflectiveWater",3)==2 && ProgramStringIsNative(GL_FRAGMENT_PROGRAM_ARB,"waterDyn.fp") && GLEW_ARB_texture_float)
 		return new CDynWater;
-	else if(GLEW_ARB_fragment_program && configHandler.GetInt("ReflectiveWater",1) && ProgramStringIsNative(GL_FRAGMENT_PROGRAM_ARB,"water.fp"))
+	else if(GLEW_ARB_fragment_program && configHandler.GetInt("ReflectiveWater",3)==3 && GLEW_ARB_texture_rectangle)
+		return new CRefractWater;
+	else if(GLEW_ARB_fragment_program && configHandler.GetInt("ReflectiveWater",3) && ProgramStringIsNative(GL_FRAGMENT_PROGRAM_ARB,"water.fp"))
 		return new CAdvWater;
 	else
 		return new CBasicWater;
